--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-pdf": "^7.3.3",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
+    "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.31.3",
